Nice  responsive  menu

--- a/projects.html
+++ b/projects.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Brice Peres</title>
-  <meta name="author" content="Brice Peres">
   <link rel="stylesheet" href="lib/stylesheets/default.css"/>
+  <link rel="stylesheet" href="site/Projects/stylesheets/game.css"/>
   <script src="lib/scripts/menu.js" defer></script>
-  <script src="site/Home/simple_cube.js" defer></script>
+  <script src="site/Projects/game.js" defer></script>
 
 </head>
 <body>
@@ -24,9 +24,8 @@
   </header>
 
   <main>
-    <canvas id="my_Canvas"></canvas>
+    <div id="Game"></div>
   </main>
-  <footer>
-  </footer>
+
 </body>
 </html>
