--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Brice Peres</title>
   <link rel="stylesheet" href="lib/stylesheets/default.css"/>
   <link rel="stylesheet" href="site/Projects/stylesheets/game.css"/>
@@ -17,7 +17,7 @@
       <a href="index.html?reload=RELOAD_ON_SAVE" title="Home page" id="home-button">Brice Peres</a>
       <input id="nav-list" type="image" name="List Icon" src="misc/list_icon.png" alt="list_icon"/>
     </div>
-    <nav id="nav" state="shown">
+    <nav id="nav" state="hidden">
       <a href="projects.html?reload=RELOAD_ON_SAVE" title="Show projects">Projects</a>
       <a href="education.html?reload=RELOAD_ON_SAVE" title="Show education">Education</a>
     </nav>
