--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
       <a href="index.html?reload=RELOAD_ON_SAVE" title="Home page" id="home-button">Brice Peres</a>
       <input id="nav-list" type="image" name="List Icon" src="misc/list_icon.png" alt="list_icon"/>
     </div>
-    <nav id="nav" state="hidden">
+    <nav id="nav" state="start">
       <a href="projects.html?reload=RELOAD_ON_SAVE" title="Show projects">Projects</a>
       <a href="education.html?reload=RELOAD_ON_SAVE" title="Show education">Education</a>
     </nav>
