--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   </header>
 
   <main>
+    <div id="test">
     <canvas id="my_Canvas"></canvas>
+    </div>
   </main>
   <footer>
   </footer>
