nice nice scroll

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 
   <main>
     <div id="test">
-    <canvas id="my_Canvas"></canvas>
+    <canvas id="my_Canvas">
+      <div id="text">
+        <p>Hey, this is a test paragraph !</p>
+      </div>
+      </canvas>
     </div>
   </main>
   <footer>
