--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Brice Peres</title>
   <link rel="stylesheet" href="lib/stylesheets/default.css"/>
-  <link rel="stylesheet" href="site/Projects/stylesheets/game.css"/>
+  <link rel="stylesheet" href="site/Projects/stylesheets/projects.css"/>
   <script src="lib/scripts/menu.js" defer></script>
-  <script src="site/Projects/game.js" defer></script>
 
 </head>
 <body>
@@ -24,7 +23,43 @@
   </header>
 
   <main>
-    <div id="Game"></div>
+    <div class="project-list">
+      <div class="project">
+        <div class="project-descr">
+          <div class="project-descr-text">
+            <h1>Rustracer</h1>
+            <p>A basic raytracer implementation(on CPU) I'm currently working on in order to learn Rust</p>
+
+            <p>This raytracer can only handles spheres and three types of material:<p>
+            <ul>
+            <li>Lambertian</li>
+            <li>Dielectric</li>
+            <li>Metalic</li>
+            </ul>
+
+            <p>It also support depth of field.<p></p>
+
+            <p>While computing the output image, the current state is displayed in a window managed on a different thread.</p>
+          </div>
+          <img src="misc/raytracing.png" alt="image rendered by this raytracer"/>
+        </div>
+      </div>
+
+      <div class="project">
+        <div class="project-descr">
+          <div class="project-descr-text">
+            <h1>Mesh tools</h1>
+            <h2>Description</h2>
+            <p>mesh_tools goal is to allow to display and modify meshes with simple transformations. Currently only the display is implemented. It is possible to import a .ply mesh(the parser was really made quickly and is not good but it is not essential). Most of the work done concern the scene display as well as input management and camera control/displacement.</p>
+
+            <p>There is 2 modes, one is a simple rust lib and the other implement a python library (those two mode are not compatible so I made a .sh script to switch beetweeb the two). To switch between the two modes simply run :<p>
+            <code>./switch</code>
+          </div>
+          <img src="misc/mesh_tools.png" alt=""/>
+        </div>
+      </div>
+
+    </div>
   </main>
 
 </body>
