--- a/projects.html
+++ b/projects.html
@@ -59,6 +59,21 @@
         </div>
       </div>
 
+      <div class="project">
+        <div class="project-descr">
+          <div class="project-descr-text">
+            <h1>Mesh tools</h1>
+            <h2>Description</h2>
+            <p>mesh_tools goal is to allow to display and modify meshes with simple transformations. Currently only the display is implemented. It is possible to import a .ply mesh(the parser was really made quickly and is not good but it is not essential). Most of the work done concern the scene display as well as input management and camera control/displacement.</p>
+
+            <p>There is 2 modes, one is a simple rust lib and the other implement a python library (those two mode are not compatible so I made a .sh script to switch beetweeb the two). To switch between the two modes simply run :<p>
+            <code>./switch</code>
+          </div>
+          <img src="misc/mesh_tools.png" alt=""/>
+        </div>
+      </div>
+
+
     </div>
   </main>
 
