--- a/education.html
+++ b/education.html
@@ -2,18 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Brice Peres</title>
   <link rel="stylesheet" href="lib/stylesheets/default.css"/>
+  <link rel="stylesheet" href="site/Education/stylesheets/education.css"/>
+  <script src="lib/scripts/menu.js" defer></script>
+
 </head>
 <body>
 
   <header>
-    <a href="index.html?reload=RELOAD_ON_SAVE" title="Home page" id="home-button">Brice Peres</a>
-    <nav>
+    <div id="top-bar">
+      <a href="index.html?reload=RELOAD_ON_SAVE" title="Home page" id="home-button">Brice Peres</a>
+      <input id="nav-list" type="image" name="List Icon" src="misc/list_icon.png" alt="list_icon"/>
+    </div>
+    <nav id="nav" state="start">
       <a href="projects.html?reload=RELOAD_ON_SAVE" title="Show projects">Projects</a>
-      <a href="site/Education/education.html?reload=RELOAD_ON_SAVE" title="Show education">Education</a>
+      <a href="education.html?reload=RELOAD_ON_SAVE" title="Show education">Education</a>
     </nav>
   </header>
+
+  <main>
+          <a href="misc/CV-Brice-PERES-en.pdf" title="Download CV" id="CVbutton">Download CV</a>
+  </main>
 
 </body>
 </html>
