--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Brice Peres</title>
   <meta name="author" content="Brice Peres">
   <link rel="stylesheet" href="lib/stylesheets/default.css"/>
+  <link rel="stylesheet" href="site/Home/stylesheets/canvas.css"/>
   <script src="lib/scripts/menu.js" defer></script>
   <script src="site/Home/simple_cube.js" defer></script>
 
