--- a/projects.html
+++ b/projects.html
@@ -6,8 +6,9 @@
   <title>Brice Peres</title>
   <link rel="stylesheet" href="lib/stylesheets/default.css"/>
   <link rel="stylesheet" href="site/Projects/stylesheets/projects.css"/>
+  <link rel="stylesheet" href="site/Home/stylesheets/canvas.css"/>
   <script src="lib/scripts/menu.js" defer></script>
-
+  <script src="site/Home/simple_cube.js" defer></script>
 </head>
 <body>
 
@@ -23,6 +24,11 @@
   </header>
 
   <main>
+    <canvas id="my_Canvas">
+      <div id="text">
+        <p>Hey, this is a test paragraph !</p>
+      </div>
+    </canvas>
     <div class="project-list">
       <div class="project">
         <div class="project-descr">
