--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <title>Brice Peres</title>
   <meta name="author" content="Brice Peres">
   <link rel="stylesheet" href="lib/stylesheets/default.css"/>
-  <link rel="stylesheet" href="site/Home/stylesheets/canvas.css"/>
+  <link rel="stylesheet" href="lib/stylesheets/canvas.css"/>
   <script src="lib/scripts/menu.js" defer></script>
-  <script src="site/Home/simple_cube.js" defer></script>
+  <script src="lib/scripts/simple_cube.js" defer></script>
 
 </head>
 <body>
@@ -25,13 +25,9 @@
   </header>
 
   <main>
-    <div id="test">
     <canvas id="my_Canvas">
-      <div id="text">
         <p>Hey, this is a test paragraph !</p>
-      </div>
       </canvas>
-    </div>
   </main>
   <footer>
   </footer>
