--- a/projects.html
+++ b/projects.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Brice Peres</title>
   <link rel="stylesheet" href="lib/stylesheets/default.css"/>
   <link rel="stylesheet" href="site/Projects/stylesheets/projects.css"/>
-  <link rel="stylesheet" href="site/Home/stylesheets/canvas.css"/>
+  <link rel="stylesheet" href="lib/stylesheets/canvas.css"/>
   <script src="lib/scripts/menu.js" defer></script>
-  <script src="site/Home/simple_cube.js" defer></script>
+  <script src="lib/scripts/simple_cube.js" defer></script>
 </head>
 <body>
 
