--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="lib/stylesheets/canvas.css"/>
   <script src="lib/scripts/menu.js" defer></script>
   <script src="lib/scripts/simple_cube.js" defer></script>
+  <script src="site/Projects/scripts/project_focus.js" defer></script>
 </head>
 <body>
 
@@ -30,7 +31,7 @@
       </div>
     </canvas>
     <div class="project-list">
-      <div class="project">
+      <div class="project" state="unfocused">
         <div class="project-descr">
           <div class="project-descr-text">
             <h1>Rustracer</h1>
@@ -51,7 +52,7 @@
         </div>
       </div>
 
-      <div class="project">
+      <div class="project" state="unfocused">
         <div class="project-descr">
           <div class="project-descr-text">
             <h1>Mesh tools</h1>
@@ -65,7 +66,7 @@
         </div>
       </div>
 
-      <div class="project">
+      <div class="project" state="unfocused">
         <div class="project-descr">
           <div class="project-descr-text">
             <h1>Mesh tools</h1>
