--- a/education.html
+++ b/education.html
@@ -23,7 +23,7 @@
   </header>
 
   <main>
-          <a href="misc/CV-Brice-PERES-en.pdf" title="Download CV" id="CVbutton">Download CV</a>
+    <a href="misc/CV-Brice-PERES-en.pdf" title="Download CV" id="CVbutton" target="_blank">Download CV</a>
   </main>
 
 </body>
