--- a/projects.html
+++ b/projects.html
@@ -34,6 +34,23 @@
       <div class="project" state="unfocused">
         <div class="project-descr">
           <div class="project-descr-text">
+            <h1>Personal Website</h1>
+            <p>I wasn't familiar with front end programing (nor interested) but I wanted to have a website to display my projects with a little bit more control than github allows. So I decided to make this website.</p>
+            <p>I made it in roughly 3 weeks since I had to learn html/css and javascript as well as the specificity of WebGL compared to OpenGl 3.
+              The background animation is entirely made with WebGl (and javascript of course).
+              It is definitely far from being perfect and i guess the code could be cleaner (I'm not a javascript expert) but I don't wan't to spend to much time on it.
+              I've also tried to make it work on mobile devices as well.
+              However, the user experience is definitely better on computer (if you are on a mobile, check it out on your computer). </p>
+            <p>Finally, I don't think any picture are necessary for this project 😅</p>
+            <a href="https://github.com/BricePrs/briceprs.github.io"  title="Project Repo">Source Code</a>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="project" state="unfocused">
+        <div class="project-descr">
+          <div class="project-descr-text">
             <h1>Rustracer</h1>
             <p>A basic raytracer implementation(on CPU) I'm currently working on in order to learn Rust</p>
 
@@ -47,6 +64,7 @@
             <p>It also support depth of field.<p></p>
 
             <p>While computing the output image, the current state is displayed in a window managed on a different thread.</p>
+            <a href="https://github.com/BricePrs/Rustracer"  title="Project Repo">Source Code</a>
           </div>
           <img src="misc/raytracing.png" alt="image rendered by this raytracer"/>
         </div>
@@ -61,25 +79,11 @@
 
             <p>There is 2 modes, one is a simple rust lib and the other implement a python library (those two mode are not compatible so I made a .sh script to switch beetweeb the two). To switch between the two modes simply run :<p>
             <code>./switch</code>
+            <a href="https://github.com/BricePrs/mesh_tools_py"  title="Project Repo">Source Code</a>
           </div>
           <img src="misc/mesh_tools.png" alt=""/>
         </div>
       </div>
-
-      <div class="project" state="unfocused">
-        <div class="project-descr">
-          <div class="project-descr-text">
-            <h1>Mesh tools</h1>
-            <h2>Description</h2>
-            <p>mesh_tools goal is to allow to display and modify meshes with simple transformations. Currently only the display is implemented. It is possible to import a .ply mesh(the parser was really made quickly and is not good but it is not essential). Most of the work done concern the scene display as well as input management and camera control/displacement.</p>
-
-            <p>There is 2 modes, one is a simple rust lib and the other implement a python library (those two mode are not compatible so I made a .sh script to switch beetweeb the two). To switch between the two modes simply run :<p>
-            <code>./switch</code>
-          </div>
-          <img src="misc/mesh_tools.png" alt=""/>
-        </div>
-      </div>
-
 
     </div>
   </main>
