--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,10 @@
       <div class="project" state="unfocused">
         <div class="project-descr">
           <div class="project-descr-text">
-            <h1>Personal Website</h1>
+            <div class="header-container">
+              <h1>Personal Website</h1>
+              <h6>Oct. - Nov. 2022</h6>
+            </div>
             <p>I wasn't familiar with front end programing (nor interested) but I wanted to have a website to display my projects with a little bit more control than github allows. So I decided to make this website.</p>
             <p>I made it in roughly 3 weeks since I had to learn html/css and javascript as well as the specificity of WebGL compared to OpenGl 3.
               The background animation is entirely made with WebGl (and javascript of course).
@@ -42,19 +45,63 @@
               I've also tried to make it work on mobile devices as well.
               However, the user experience is definitely better on computer (if you are on a mobile, check it out on your computer). </p>
             <p>Finally, I don't think any picture are necessary for this project 😅</p>
-            <a href="https://github.com/BricePrs/briceprs.github.io"  title="Project Repo">Source Code</a>
+            <a href="https://github.com/BricePrs/briceprs.github.io"  title="Project Repo" target="_blank">Source Code</a>
           </div>
         </div>
       </div>
 
+      <div class="project" state="unfocused">
+        <div class="project-descr">
+          <div class="project-descr-text">
+            <div class="header-container">
+              <h1>Seismic Panic Game</h1>
+              <h6>Oct. 1st 2022</h6>
+            </div>
+            <p>I made this game with a friend during ludum dare 51 game jam.
+              It was made using Unity in under 24 hours as our participation was a las minute decision (compared to 72 hours usually).
+              We ended up 501st out of 1703 participants.
+            </p>
+            <a href="https://ldjam.com/events/ludum-dare/51/seismic-panic"  title="Project Repo" target="_blank">Ludum dare</a>
+            <a href="http://virgile.henry.free.fr/games/SeismicPanic/"  title="Play game" target="_blank">Play Game</a>
+          </div>
+          <div class="media-list">
+            <img src="misc/ludum_dare/ludum_dare.png" alt="image rendered by this raytracer"/>
+            <img src="misc/ludum_dare/game.gif" alt="image rendered by this raytracer" class="hide-able"/>
+            <img src="misc/ludum_dare/eng_game.gif" alt="image rendered by this raytracer" class="hide-able"/>
+          </div>
+        </div>
+      </div>
 
       <div class="project" state="unfocused">
         <div class="project-descr">
           <div class="project-descr-text">
-            <h1>Rustracer</h1>
+            <div class="header-container">
+              <h1>Mesh tools</h1>
+              <h6>Sept. - Oct. 2022</h6>
+            </div>
+            <h2>Description</h2>
+            <p>mesh_tools goal is to allow to display and modify meshes with simple transformations. Currently only the display is implemented. It is possible to import a .ply mesh(the parser was really made quickly and is not good but it is not essential). Most of the work done concern the scene display as well as input management and camera control/displacement.</p>
+
+            <p>There is 2 modes, one is a simple rust lib and the other implement a python library (those two mode are not compatible so I made a .sh script to switch beetweeb the two). To switch between the two modes simply run :<p>
+            <code>./switch</code>
+            <a href="https://github.com/BricePrs/mesh_tools_py"  title="Project Repo" target="_blank">Source Code</a>
+          </div>
+          <div class="media-list">
+            <img src="misc/mesh_tools/mesh_tools.png" alt=""/>
+          </div>
+        </div>
+      </div>
+
+      <div class="project" state="unfocused">
+        <div class="project-descr">
+          <div class="project-descr-text">
+            <div class="header-container">
+              <h1>Rustracer</h1>
+              <h6>Aug. 2022</h6>
+            </div>
             <p>A basic raytracer implementation(on CPU) I'm currently working on in order to learn Rust</p>
 
-            <p>This raytracer can only handles spheres and three types of material:<p>
+            <p>This raytracer can only handle spheres and three types of material:<p>
             <ul>
             <li>Lambertian</li>
             <li>Dielectric</li>
@@ -64,24 +111,11 @@
             <p>It also support depth of field.<p></p>
 
             <p>While computing the output image, the current state is displayed in a window managed on a different thread.</p>
-            <a href="https://github.com/BricePrs/Rustracer"  title="Project Repo">Source Code</a>
+            <a href="https://github.com/BricePrs/Rustracer"  title="Project Repo" target="_blank">Source Code</a>
           </div>
-          <img src="misc/raytracing.png" alt="image rendered by this raytracer"/>
-        </div>
-      </div>
-
-      <div class="project" state="unfocused">
-        <div class="project-descr">
-          <div class="project-descr-text">
-            <h1>Mesh tools</h1>
-            <h2>Description</h2>
-            <p>mesh_tools goal is to allow to display and modify meshes with simple transformations. Currently only the display is implemented. It is possible to import a .ply mesh(the parser was really made quickly and is not good but it is not essential). Most of the work done concern the scene display as well as input management and camera control/displacement.</p>
-
-            <p>There is 2 modes, one is a simple rust lib and the other implement a python library (those two mode are not compatible so I made a .sh script to switch beetweeb the two). To switch between the two modes simply run :<p>
-            <code>./switch</code>
-            <a href="https://github.com/BricePrs/mesh_tools_py"  title="Project Repo">Source Code</a>
+          <div class="media-list">
+            <img src="misc/raytracer/raytracing.png" alt="image rendered by this raytracer"/>
           </div>
-          <img src="misc/mesh_tools.png" alt=""/>
         </div>
       </div>
 
