--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,6 @@
               It is definitely far from being perfect and i guess the code could be cleaner (I'm not a javascript expert) but I don't wan't to spend to much time on it.
               I've also tried to make it work on mobile devices as well.
               However, the user experience is definitely better on computer (if you are on a mobile, check it out on your computer). </p>
-            <p>Finally, I don't think any picture are necessary for this project 😅</p>
             <a href="https://github.com/BricePrs/briceprs.github.io"  title="Project Repo" target="_blank">Source Code</a>
           </div>
         </div>
@@ -65,9 +64,9 @@
             <a href="http://virgile.henry.free.fr/games/SeismicPanic/"  title="Play game" target="_blank">Play Game</a>
           </div>
           <div class="media-list">
-            <img src="misc/ludum_dare/ludum_dare.png" alt="image rendered by this raytracer"/>
-            <img src="misc/ludum_dare/game.gif" alt="image rendered by this raytracer" class="hide-able"/>
-            <img src="misc/ludum_dare/eng_game.gif" alt="image rendered by this raytracer" class="hide-able"/>
+            <img src="misc/ludum_dare/game.gif" alt="gameplay gif" class="hide-able"/>
+            <img src="misc/ludum_dare/ludum_dare.png" alt="image of the game"/>
+            <img src="misc/ludum_dare/eng_game.gif" alt="gameplay gif" class="hide-able"/>
           </div>
         </div>
       </div>
@@ -120,6 +119,9 @@
       </div>
 
     </div>
+
+    <div id="empty"></div>
+
   </main>
 
 </body>
