--- a/education.html
+++ b/education.html
@@ -23,6 +23,26 @@
   </header>
 
   <main>
+
+    <div class="school-list">
+      <div class="school">
+        <div class="header-container">
+          <h1>École nationale supérieure d'informatique et de mathématiques appliquées (ENSIMAG)</h1>
+          <h6>Sept. 2021 - May. 2024</h6>
+        </div>
+        School of computing and applied mathematics of grenoble.
+      </div>
+
+      <div class="school">
+        <div class="header-container">
+          <h1>Classe préparatoire Math Physique (CPGE)</h1>
+          <h6>Sept. 2018 - July. 2021</h6>
+        </div>
+        Two years of study which act as an intensive preparatory course at the high-school "Notre Dame de Sion" in Marseille.
+      </div>
+    </div>
+
+
     <a href="misc/CV-Brice-PERES-en.pdf" title="Download CV" id="CVbutton" target="_blank">Download CV</a>
   </main>
 
