added project kinect

--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
             <p>I made it in roughly 3 weeks since I had to learn html/css and javascript as well as the specificity of WebGL compared to OpenGl 3.
               The background animation is entirely made with WebGl (and javascript of course).
               It is definitely far from being perfect and i guess the code could be cleaner (I'm not a javascript expert) but I don't wan't to spend to much time on it.
-              I've also tried to make it work on mobile devices as well.
+              I've also tried to make as responsive as I could but it is hard when using WebGL (and I'm running out of time).
               However, the user experience is definitely better on computer (if you are on a mobile, check it out on your computer). </p>
             <a href="https://github.com/BricePrs/briceprs.github.io"  title="Project Repo" target="_blank">Source Code</a>
           </div>
